# mnemo-vla

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  papers.md  proposal.md  roadmap.md
examples/: mnemo_bench_demo.py  quickstart.py  retrieval_benchmark.py
mnemo/: __init__.py
mnemo/integrations/: __init__.py  mem0_README.md  mem0_planner_patch.py
mnemo/language_memory/: __init__.py  formatter.py  schema.py
mnemo/mnemo_bench/: __init__.py  adapters.py  metrics.py  radar.py  runner.py  tasks.py
mnemo/persistent_memory/: __init__.py  embedders.py  episode_summary.py  memory_store.py  synthetic_bench.py
mnemo/utils/: __init__.py
paper/: main.tex  references.bib
paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_method.tex  04_experiments.tex  05_discussion.tex  06_conclusion.tex  99_appendix.tex
scripts/: make_architecture_figure.py  smoke_test_mem0.py
tests/: test_integrations.py  test_language_memory.py  test_mnemo_bench.py  test_persistent_memory.py  test_synthetic_bench.py
